--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "xss",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "format": "bunx @biomejs/biome format . --write"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
     "@types/bun": "latest"
