--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "format": "bunx @biomejs/biome format . --write"
+    "format": "bunx @biomejs/biome format . --write",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "husky": "^9.0.11"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
