--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "dev": "bun index.ts",
     "format": "bunx @biomejs/biome format . --write",
     "prepare": "husky"
   },
